add professionals endpoints
