# http/swagger/swagger.yml
@@ -97,6 +97,8 @@ definitions:
         type: integer
       category:
         type: string
+      idSubcategory:
+        type: integer
       subCategory:
         type: string
 
@@ -120,12 +122,13 @@ definitions:
           properties:
             day:
               type: integer
+              pattern: '[1-7]'
             startTime:
-              type: integer
-              default: 9
+              type: string
+              pattern: '^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$'
             finishTime:
-              type: integer
-              default: 18
+              type: string
+              pattern: '^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$'
   appointment:
     type: object
     required:
